--- a/style.css
+++ b/style.css
@@ -293,21 +293,22 @@ ul.info_contacts li {
 }
 
 .soft-skill_list td p:nth-child(2) {
-  margin-right: 3rem;
+  margin-right: 2rem;
 }
 
 .soft-skill_behavioral,
 .soft-skill_motivators {
-  font-size: .9rem;
+  font-size: .8rem;
   background-color: #FDFEFE;
-  /* border-radius: 15px; */
-  padding-bottom: 1rem;
+  margin: 0 1vw;
+  border-radius: 10px;
 }
 
-.soft-skill_list td:first-child {
-  border: 15px solid #F8F9FA;
-  border-style: none solid none none;
+.soft-skill_behavioral td,
+.soft-skill_motivators td {
+ padding: .2rem .5rem 1.5rem;
 }
+
 
 .soft-skill_list p,
 .soft-skill_list img {
