--- a/style.css
+++ b/style.css
@@ -221,7 +221,7 @@ ul.info_contacts li {
 
 /* City */
 .city_text span {
-  line-height: 2rem;
+  line-height: 2;
 
 }
 
@@ -306,7 +306,7 @@ ul.info_contacts li {
 
 .soft-skill_behavioral td,
 .soft-skill_motivators td {
- padding: .2rem .5rem 1.5rem;
+  padding: .2rem .5rem 1.5rem;
 }
 
 
@@ -324,6 +324,49 @@ ul.info_contacts li {
 .soft-skill_behavioral span,
 .soft-skill_motivators span {
   vertical-align: super;
+}
+
+/* Technical Abilities */
+.technical-abilities_header {
+  margin-bottom: 10vh;
+}
+
+.technical-abilities_title {
+  margin-bottom: 1.5rem;
+}
+
+.technical-abilities-desciption {
+  font-size: 1.3rem;
+  margin-right: 10vw;
+  margin-bottom: 3vh;
+  line-height: 1.3;
+}
+
+.technical-abilities_level>div {
+  width: 58vw;
+  display: inline-flex;
+  flex-direction: column;
+  background-color: #FDFEFE;
+  margin: 1rem 1.5rem .5rem 0rem;
+  border-radius: 10px;
+  padding: 1.5rem;
+}
+
+.technical-abilities_level>div img {
+  width: 3vw;
+  margin-right: 1rem;
+}
+
+.technical-abilities_level>div h3 {
+  color: #0081C5;
+  font-weight: bold;
+  font-size: 2rem;
+  margin-bottom: 1rem;
+  vertical-align: middle;
+}
+
+.technical-abilities_level p {
+  line-height: 1.4;
 }
 
 /* Footer */
