--- a/style.css
+++ b/style.css
@@ -1,13 +1,26 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
+/* CSS MODO */
+:root {
+  --content-background: #F8F9FA;
+  --color-primary: #0081C5;
+  --color-secondary: #464646;
+  --color-grey: #777777;
+  --color-grey-light: #eaebeb;
+  --color-white: #FDFEFE;
+  --color-dark: #050303;
+
+}
+
+body {
+  background-color: var(--content-background);
+  font-family: 'Roboto', sans-serif;
+  color: var(--color-dark);
+  line-height: 1;
+}
 
 :root {
   font-size: 16px;
   font-family: 'Roboto', sans-serif;
-  color: #121212;
-}
-
-body {
-  background-color: #F8F9FA;
+  color: var(--color-dark);
 }
 
 strong {
@@ -22,17 +35,17 @@ strong {
 }
 
 .container {
-  margin: 0 5vw;
+  margin: 0 .70cm;
 }
 
 .professional_icon-title {
   font: 500 2.5rem Roboto;
-  color: #464646;
+  color: var(--color-secondary);
 
 }
 
 .professional_icon span {
-  color: #464646;
+  color: var(--color-secondary);
   display: flex;
   font-size: 1.5rem;
   font-weight: 500;
@@ -41,42 +54,41 @@ strong {
 
 .professional_icon img {
   margin-right: 1rem;
-  width: 2.7vw;
+  width: .75cm;
 
 }
 
 .divider {
-  background-color: #eaebeb;
+  background-color: var(--color-grey-light);
   height: 3px;
   border: none;
   margin: 1.5rem 0;
 }
 
-
 /* Header */
 
 .header {
-  margin-bottom: 15vh;
+  margin-bottom: 3cm;
 
 }
 
 .header-soft-skill {
-  margin-bottom: 5vh;
+  margin-bottom: 1.5cm;
 }
 
 .header_professional {
-  padding-top: 11vh;
+  padding-top: 2cm;
 
 }
 
 .header_professional_soft-skill {
-  padding-top: 7vh;
+  padding-top: 2cm;
 }
 
 
 .header_professional-name {
-  font: 300 3.3rem Roboto;
-  color: #464646;
+  font: 300 2.5rem Roboto;
+  color: var(--color-secondary);
 }
 
 .header_professional-name-information {
@@ -86,71 +98,72 @@ strong {
 .header_professional-text {
   font-weight: bold;
 
-  color: #777777;
-  font-size: 1.5rem;
+  color: var(--color-grey);
+  font-size: 1.3rem;
   line-height: 1.5;
+  margin-right: 10cm;
 
 }
 
 .header_professional-text span:not(:last-child)::after {
-  content: ' |';
+  content: ' | ';
 
 }
 
 .header_shapes-elipse-blue {
   position: absolute;
 
-  right: -15vw;
-  top: -9vh;
-  width: 40vw;
+  right: -3cm;
+  top: -2.5cm;
+  width: 7cm;
 
 }
 
 .header_shapes-elipse-yellow {
   position: absolute;
 
-  right: 32vw;
-  top: 14vh;
-  width: 17vw;
+  right: 5cm;
+  top: 3cm;
+  width: 3.5cm;
 
 }
 
 .no_picture_header_shapes-elipse-yellow {
   position: absolute;
 
-  right: 12vw;
-  top: 10vh;
-  width: 20vw;
+  right: 2.5cm;
+  top: 3cm;
+  width: 4.5cm;
   z-index: -1;
 
 }
 
 .header_shapes-elipse-white {
-  width: 37vw;
+  width: 6cm;
 
 }
 
 .no_picture_header_shapes-elipse-grey {
   position: absolute;
 
-  right: -10vw;
-  top: -2vh;
-  width: 20vw;
+  right: -2cm;
+  top: -.5cm;
+  width: 4.2cm;
 }
 
 .header_shapes-container-photo {
   position: absolute;
 
-  right: 4vw;
-  top: 3.5vh;
+  right: 1cm;
+  top: .6cm;
 
 }
 
 .header_shapes-photo {
   position: absolute;
 
-  left: 1.5vw;
-  top: 1.5vh;
+  left: .3cm;
+  top: .3cm;
   width: 90%;
 
 }
@@ -162,22 +175,18 @@ strong {
 
 }
 
-ul.info_contacts li {
-  display: inline;
-
-  line-height: 2;
-
+.info_contacts>span:first-child img {
+  margin-right: .5rem;
+  margin-left: 0;
 }
 
-.info_contacts li:not(:first-child) {
-  margin-left: .5rem;
-
+.info_contacts>span {
+  line-height: 2;
 }
 
 .info_contacts img {
-  margin-right: .4rem;
-  width: 2vw;
-
+  margin-right: .5rem;
+  width: .5cm;
 }
 
 /* About */
@@ -199,7 +208,7 @@ ul.info_contacts li {
 .professional_information_text p {
   margin-bottom: 1rem;
   font-weight: bold;
-  color: #464646;
+  color: var(--color-secondary);
 }
 
 .professional_information_text span {
@@ -209,8 +218,17 @@ ul.info_contacts li {
 }
 
 .professional_information_text-col-1 {
-  padding-right: 30vw;
+  padding-right: 3cm;
 
+}
+
+.professional_information_text-col-1 p {
+  margin-bottom: 1rem;
+
+}
+
+.professional_information_text-col-2 p {
+  margin-bottom: .5rem;
 }
 
 .professional_information_text-col-2 {
@@ -243,11 +261,12 @@ ul.info_contacts li {
 }
 
 .professional_info {
-  margin-top: 1.5vh;
+  margin-top: .4cm;
 }
 
-.certifications-icon {
-  width: 4vw !important;
+.certifications-icon,
+.languages-icon {
+  width: 1cm !important;
 }
 
 .history_info {
@@ -299,8 +318,8 @@ ul.info_contacts li {
 .soft-skill_behavioral,
 .soft-skill_motivators {
   font-size: .8rem;
-  background-color: #FDFEFE;
-  margin: 0 1vw;
+  background-color: var(--color-white);
+  margin: 0 .25cm;
   border-radius: 10px;
 }
 
@@ -328,7 +347,7 @@ ul.info_contacts li {
 
 /* Technical Abilities */
 .technical-abilities_header {
-  margin-bottom: 10vh;
+  margin-bottom: 2.5cm;
 }
 
 .technical-abilities_title {
@@ -337,28 +356,28 @@ ul.info_contacts li {
 
 .technical-abilities-desciption {
   font-size: 1.3rem;
-  margin-right: 10vw;
-  margin-bottom: 3vh;
+  margin-right: 2.5cm;
+  margin-bottom: .75cm;
   line-height: 1.3;
 }
 
 .technical-abilities_level>div {
-  width: 58vw;
+  width: 14.5cm;
   display: inline-flex;
   flex-direction: column;
-  background-color: #FDFEFE;
+  background-color: var(--color-white);
   margin: 1rem 1.5rem .5rem 0rem;
   border-radius: 10px;
   padding: 1.5rem;
 }
 
 .technical-abilities_level>div img {
-  width: 3vw;
+  width: .75cm;
   margin-right: 1rem;
 }
 
 .technical-abilities_level>div h3 {
-  color: #0081C5;
+  color: var(--color-primary);
   font-weight: bold;
   font-size: 2rem;
   margin-bottom: 1rem;
@@ -369,17 +388,27 @@ ul.info_contacts li {
   line-height: 1.4;
 }
 
+.professional_match_percentage {
+  display: inline-flex;
+  flex-wrap: wrap;
+}
+
+.professional_match_percentage>div {
+  width: 33%;
+  margin-bottom: .5cm;
+}
+
 /* Footer */
 
 .footer_pagination {
   display: flex;
   align-items: center;
 
-  bottom: 3vh;
-  color: #777777;
+  bottom: .75cm;
+  color: var(--color-grey);
   font-size: 1.5rem;
   position: absolute;
-  right: 4vw;
+  right: 1cm;
   word-spacing: 3px;
 
 }
@@ -391,6 +420,6 @@ ul.info_contacts li {
 
 .footer_pagination img {
   margin-right: .5rem;
-  width: 10vw;
+  width: 2.5cm;
 
 }
