--- a/style.css
+++ b/style.css
@@ -80,6 +80,10 @@ strong {
 
 }
 
+.header_information{
+  padding-top: 1.5cm;
+}
+
 .header_professional_soft-skill {
   padding-top: 2cm;
 }
@@ -256,7 +260,7 @@ strong {
 .professional_info-desciption {
   margin-top: 1rem;
   text-align: justify;
-
+  line-height: 1.3;
 }
 
 .professional_info {
