--- a/style.css
+++ b/style.css
@@ -1,13 +1,19 @@
 /* CSS MODO */
 :root {
+  /* Background */
   --content-background: #F8F9FA;
-  --color-primary: #0081C5;
-  --color-secondary: #464646;
-  --color-grey: #777777;
-  --color-grey-light: #eaebeb;
+  /* Background behavioral/motivators */
   --color-white: #FDFEFE;
-  --color-dark: #050303;
-
+  /* Title */
+  --color-secondary: #464646;
+  /* Text */
+  --color-dark: #121212;
+  /* Subtitle */
+  --color-grey: #777777;
+  /* Title technical abilities */
+  --color-primary: #0081C5;
+  /* Divider */
+  --color-grey-light: #eaebeb;
 }
 
 body {
@@ -57,6 +63,11 @@ strong {
   width: .75cm;
 }
 
+.certifications_professional_icon-image {
+  width: .75cm;
+  margin-right: 0 !important;
+}
+
 .divider {
   background-color: var(--color-grey-light);
   height: 3px;
@@ -71,21 +82,25 @@ strong {
 
 }
 
-.header-soft-skill {
-  margin-bottom: 1.5cm;
-}
-
 .header_professional {
   padding-top: 2cm;
 
 }
 
-.header_information{
+.header-soft-skill {
+  margin-bottom: 1.3cm;
+}
+
+.header_information {
   padding-top: 1.5cm;
 }
 
+.information-text {
+  color: var(--color-dark) !important;
+}
+
 .header_professional_soft-skill {
-  padding-top: 2cm;
+  padding-top: 1.5cm;
 }
 
 
@@ -211,7 +226,7 @@ strong {
 .professional_information_text p {
   margin-bottom: 1rem;
   font-weight: bold;
-  color: var(--color-secondary);
+  color: var(--color-dark);
 }
 
 .professional_information_text span {
@@ -261,6 +276,7 @@ strong {
   margin-top: 1rem;
   text-align: justify;
   line-height: 1.3;
+  color: var(--color-grey);
 }
 
 .professional_info {
@@ -331,13 +347,6 @@ strong {
   padding: .2rem .5rem 1.5rem;
 }
 
-
-.soft-skill_list p,
-.soft-skill_list img {
-  padding-left: 1rem;
-
-}
-
 .soft-skill_behavioral p,
 .soft-skill_motivators p {
   margin-bottom: .8rem;
@@ -346,6 +355,11 @@ strong {
 .soft-skill_behavioral span,
 .soft-skill_motivators span {
   vertical-align: super;
+}
+
+.soft-skill-description {
+  color: var(--color-grey);
+  line-height: 1.3;
 }
 
 /* Technical Abilities */
