habilidades tecnicas ok

--- a/style.css
+++ b/style.css
@@ -372,32 +372,38 @@ strong {
 }
 
 .technical-abilities-desciption {
-  font-size: 1.3rem;
-  margin-right: 2.5cm;
-  margin-bottom: .75cm;
+  font-size: 1rem;
+  margin-right: 0.5cm;
   line-height: 1.3;
 }
 
+.technical-abilities_level{
+  margin-top: .5cm;
+}
+
 .technical-abilities_level>div {
-  width: 14.5cm;
-  display: inline-flex;
+  width: 7.8cm;
+  height: 100%;
+  display: inline-block;
   flex-direction: column;
+  vertical-align: top;
   background-color: var(--color-white);
-  margin: 1rem 1.5rem .5rem 0rem;
+  /* background-color: red; */
+  margin: .5rem 1.5rem .5rem 0rem;
   border-radius: 10px;
   padding: 1.5rem;
 }
 
 .technical-abilities_level>div img {
-  width: .75cm;
+  width: .5cm;
   margin-right: 1rem;
 }
 
 .technical-abilities_level>div h3 {
   color: var(--color-primary);
   font-weight: bold;
-  font-size: 2rem;
-  margin-bottom: 1rem;
+  font-size: 1rem;
+  padding-bottom: 1rem;
   vertical-align: middle;
 }
 
